--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,5 +1,5 @@
 name: "Tianyi Li"
-title: "Assistant Professor, Ph.D."
+title: "Asscoiate Professor, Ph.D."
 email: "tianyi [AT] cs.aau.dk"
 profile_pic: "/images/tianyi.jpg"
 twitter: ""
